// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxGroup custom theme 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bFgzgw"
>
  <div
    class="StyledBox-sc-13pk1d4-0 cQnxBt StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jUgUBs"
      label="first-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cOPtKl"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 hvZcqQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jUgUBs"
      label="second-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cOPtKl"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 hvZcqQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup disabled renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bFgzgw"
>
  <div
    class="StyledBox-sc-13pk1d4-0 bZHOJY StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 hRSKdR"
      disabled=""
      label="First"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 izuNoZ"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 hvZcqQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 hRSKdR"
      disabled=""
      label="Second"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 izuNoZ"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 hvZcqQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
          disabled=""
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
  <div
    class="StyledBox-sc-13pk1d4-0 bZHOJY StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 hRSKdR"
      disabled=""
      label="First"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 izuNoZ"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 hvZcqQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
  </div>
  <div
    class="StyledBox-sc-13pk1d4-0 bZHOJY StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 hRSKdR"
      disabled=""
      label="First"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 izuNoZ"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 hvZcqQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup initial value renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bFgzgw"
>
  <div
    class="StyledBox-sc-13pk1d4-0 bZHOJY StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jUgUBs"
      label="Maui"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cOPtKl"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 hvZcqQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
        />
      </div>
      <span>
        Maui
      </span>
    </label>
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jUgUBs"
      label="Jerusalem"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
      >
        <input
          checked=""
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cOPtKl"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 ffHnpU StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 frpnnl"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        Jerusalem
      </span>
    </label>
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jUgUBs"
      label="Wuhan"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
      >
        <input
          checked=""
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cOPtKl"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 ffHnpU StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 frpnnl"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        Wuhan
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup labelKey 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bFgzgw"
>
  <div
    class="StyledBox-sc-13pk1d4-0 bZHOJY StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jUgUBs"
      label="first-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cOPtKl"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 hvZcqQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jUgUBs"
      label="second-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cOPtKl"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 hvZcqQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onChange 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bFgzgw"
>
  <div
    class="StyledBox-sc-13pk1d4-0 bZHOJY StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jUgUBs"
      label="first-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cOPtKl"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 ffHnpU StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 frpnnl"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        first-label
      </span>
    </label>
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jUgUBs"
      label="second-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cOPtKl"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 hvZcqQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onClick for check and uncheck a CheckBox 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bFgzgw"
>
  <div
    class="StyledBox-sc-13pk1d4-0 iFvRKI StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
    tabindex="0"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jUgUBs"
      label="first-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cOPtKl"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 ffHnpU StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 frpnnl"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        first-label
      </span>
    </label>
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jUgUBs"
      label="second-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cOPtKl"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 hvZcqQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onClick for check and uncheck a CheckBox 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bFgzgw"
>
  <div
    class="StyledBox-sc-13pk1d4-0 iFvRKI StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
    tabindex="0"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jUgUBs"
      label="first-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cOPtKl"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 hvZcqQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jUgUBs"
      label="second-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cOPtKl"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 hvZcqQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup options renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bFgzgw"
>
  <div
    class="StyledBox-sc-13pk1d4-0 bZHOJY StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jUgUBs"
      label="First"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cOPtKl"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 hvZcqQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
        />
      </div>
      <span>
        First
      </span>
    </label>
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jUgUBs"
      label="Second"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cOPtKl"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 hvZcqQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup value renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bFgzgw"
>
  <div
    class="StyledBox-sc-13pk1d4-0 bZHOJY StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jUgUBs"
      label="First"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
      >
        <input
          checked=""
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cOPtKl"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 ffHnpU StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 frpnnl"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        First
      </span>
    </label>
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jUgUBs"
      label="Second"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cOPtKl"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 hvZcqQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup valueKey 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bFgzgw"
>
  <div
    class="StyledBox-sc-13pk1d4-0 bZHOJY StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jUgUBs"
      label="first-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cOPtKl"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 hvZcqQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jUgUBs"
      label="second-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jsoxwr StyledCheckBox-sc-1dbk5ju-6 eJWclz"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cOPtKl"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 hvZcqQ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;
